# drc-containers

./: .pre-commit-config.yaml  Dockerfile  README.md  email_chenies.json  email_listmode.json  email_radreads.json  generate_docker_label.py  pyproject.toml  share_subject_to_genetic_project.json
.github/workflows/: docker_publish.yaml  docker_publish.yml  links.yaml  linting.yaml  manage-projects.yaml
src/drc_containers/: email_chenies.py  email_listmode.py  email_radreads.py  share_subject_to_genetic_project.py
src/drc_containers/xnat_utils/: command_line.py  email.py  xnat_credentials.py
