[project]
dependencies = [
    "pandas",
    "pyxnat",
    "xnat",
]
name = "drc-containers"
requires-python = ">3.10"
version = "0.0.1"

[project.scripts]
share_subject_to_genetic_project = "drc_containers:share_subject_to_genetic_project.main"
email_radreads = "drc_containers:email_radreads.main"

[tool.setuptools.packages.find]
where = ["src"]
